--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".lifecycle.Lifecycle2Activity"></activity>
+        <activity
+            android:name=".lifecycle.LifecycleDialogActivity"
+            android:theme="@style/dialogActivity"/>
+        <activity android:name=".lifecycle.Lifecycle2Activity" />
         <activity android:name=".lifecycle.Lifecycle1Activity" />
         <activity
             android:name=".common.MsgShowActivity"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
