--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".lifecycle.LifecycleDialogActivity"
+            android:name=".activitylifecycle.LifecycleDialogActivity"
             android:theme="@style/dialogActivity"/>
-        <activity android:name=".lifecycle.Lifecycle2Activity" />
-        <activity android:name=".lifecycle.Lifecycle1Activity" />
+        <activity android:name=".activitylifecycle.Lifecycle2Activity" />
+        <activity android:name=".activitylifecycle.Lifecycle1Activity" />
         <activity
             android:name=".common.MsgShowActivity"
             android:launchMode="singleTop" />
